--- a/style.css
+++ b/style.css
@@ -52,13 +52,24 @@ body, html{
 }
 
 .hero{
-    background: url('images/index/hero.png') no-repeat;     
+    background: url('images/index/hero.jpg') no-repeat;     
     background-size: cover;
     width: 100%;
     height: 1400px;
     display: grid;
     place-items: center;
     height: calc(100vh - 108px);
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 108px;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 108px);
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1; 
 }
 
 .heroText{
@@ -68,6 +79,7 @@ body, html{
     text-align: center;
     color: #FAF7F0;
     letter-spacing: 5px;
+    z-index: 2;
 }
 
 .section{
