--- a/style.css
+++ b/style.css
@@ -1,254 +1,246 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-body, html{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+body, html {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-.container{
-    font-family: 'Roboto', sans-serif;
-    background-color: #FAF7F0;
-    color: #26035D;
-    overflow: auto;
-    min-height: 100%;
+.container {
+  font-family: "Roboto", sans-serif;
+  background-color: #FAF7F0;
+  color: #26035D;
+  overflow: auto;
+  min-height: 100%;
 }
 
-.nav{
-    display: flex;
-    align-items: center;
-    padding: 30px 100px 30px 100px;
+.nav {
+  display: flex;
+  align-items: center;
+  padding: 30px 100px 30px 100px;
 }
 
-.links{
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-    gap: 30px; 
+.links {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.links a {
+  text-decoration: none;
+  transition-duration: 0.5s;
+  color: #26035D;
 }
 
-.links a{
-    text-decoration: none;
-    transition-duration: 0.5s;
-    color: #26035D;
+.about:hover, .caseStudy:hover {
+  color: #7747FF;
 }
 
-.about:hover, .caseStudy:hover{
-    color: #7747FF;
+.contactUs {
+  border: 1px solid #26035D;
+  border-radius: 6px;
+  padding: 14px 20px 14px 20px;
+}
+.contactUs:hover {
+  background-color: #7747FF;
+  color: #FAF7F0;
 }
 
-.contactUs{
-    border: 1px solid #26035D;
-    border-radius: 6px;
-    padding: 14px 20px 14px 20px;
+.hero {
+  background: url("images/index/hero.jpg") no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 1400px;
+  display: grid;
+  place-items: center;
+  height: calc(100vh - 108px);
 }
-
-.contactUs:hover{
-    background-color: #7747FF;
-    color: #FAF7F0;
-}
-
-.hero{
-    background: url('images/index/hero.jpg') no-repeat;     
-    background-size: cover;
-    width: 100%;
-    height: 1400px;
-    display: grid;
-    place-items: center;
-    height: calc(100vh - 108px);
-}
-
 .hero::before {
-    content: "";
-    position: absolute;
-    top: 108px;
-    left: 0;
-    width: 100%;
-    height: calc(100% - 108px);
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1; 
+  content: "";
+  position: absolute;
+  top: 108px;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 108px);
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
-.heroText{
-    font-weight: 600;
-    font-size: 60px;
-    width: 850px;
-    text-align: center;
-    color: #FAF7F0;
-    letter-spacing: 5px;
-    z-index: 2;
+.heroText {
+  font-weight: 600;
+  font-size: 60px;
+  width: 850px;
+  text-align: center;
+  color: #FAF7F0;
+  letter-spacing: 5px;
+  z-index: 2;
 }
 
-.section{
-    padding: 40px 100px 40px 100px;
+.section {
+  padding: 40px 100px 40px 100px;
 }
 
-.content{
-    display: none;
+.content {
+  display: none;
 }
 
-.services h3{
-    font-size: 48px;
+.services {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.services h3 {
+  font-size: 48px;
 }
 
-.services{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.serviceList {
+  display: flex;
+  flex-direction: column;
 }
 
-.serviceList{
-    display: flex;
-    flex-direction: column;
+.sInside {
+  border-bottom: solid 2px #26035D;
 }
 
-.sInside{
-    border-bottom: solid 2px #26035D;
+.fInside {
+  border-top: solid 2px #26035D;
+  border-bottom: solid 2px #26035D;
 }
 
-.fInside{
-    border-top: solid 2px #26035D;
-    border-bottom: solid 2px #26035D;
+.greySection {
+  background-color: rgb(173, 173, 173);
+  display: grid;
+  place-items: center;
+  height: 650px;
 }
 
-.greySection{
-    background-color: rgb(173, 173, 173);
-    display: grid;
-    place-items: center;
-    height: 650px;
+.circle {
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  background-color: rgba(132, 148, 182, 0.5);
+  display: grid;
+  place-items: center;
+  animation: pulse 2s ease-in-out infinite;
 }
 
-.circle{
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-    background-color: rgba(132, 148, 182, 0.5);
-    display: grid;
-    place-items: center;
-    animation: pulse 2s ease-in-out infinite;
+.circle .heroText {
+  width: 300px;
+  animation: spacing 2s infinite;
 }
 
-.circle .heroText{
-    width: 300px;
-    animation: spacing 2s infinite;
+.aboutHead h1 {
+  width: 200px;
+  font-size: 100px;
 }
 
-.aboutHead h1{
-    width: 200px;
-    font-size: 100px;
+.aboutHead p {
+  font-size: 30px;
 }
 
-.aboutHead p{
-    font-size: 30px;
+.founders {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
 }
 
-.founders{
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    align-items: center;
+.founder {
+  display: flex;
+  gap: 50px;
 }
 
-.founder{
-    display: flex;
-    gap: 50px;
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 500px;
 }
 
-.info{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 500px;
+.title .name {
+  font-size: 30px;
 }
 
-.title .name{
-    font-size: 30px;
+.title .position {
+  color: grey;
 }
 
-.title .position{
-    color: grey;
+.cases {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 100px;
 }
 
-.cases{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 100px;
+.case {
+  display: flex;
+  gap: 100px;
+}
+.case .info {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  justify-content: center;
 }
 
-.case{
-    display: flex;
-    gap: 100px;
+.tag {
+  background-color: #7747FF;
+  color: white;
+  padding: 12px 14px 12px 14px;
+  border-radius: 25px;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-.case .info{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    justify-content: center;
+.getintouch h1 {
+  width: 100%;
 }
 
-.tag{
-    background-color: #7747FF;
-    color: white;
-    padding: 12px 14px 12px 14px;
-    border-radius: 25px;
-    width: fit-content;
+.offices {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
+  border-top: grey 2px solid;
+  padding-top: 100px;
 }
 
-.getintouch h1{
-    width: 100%;
+.office {
+  display: flex;
+  flex-direction: column;
+}
+.office .title {
+  color: grey;
+}
+.office .address {
+  font-size: 32px;
 }
 
-.offices{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    place-items: center;
-    border-top: grey 2px solid;
-    padding-top: 100px;
+.footer {
+  background-color: #26035D;
+  color: #FAF7F0;
 }
 
-.office{
-    display: flex;
-    flex-direction: column;
+.footerLogo {
+  filter: brightness(0) invert(1);
 }
 
-.office .title{
-    color: grey;
+.contactInfoFooter {
+  display: flex;
+  justify-content: space-around;
+  font-size: 30px;
 }
 
-.office .address{
-    font-size: 32px;
+@keyframes pulse {
+  50% {
+    width: 550px;
+    height: 550px;
+  }
 }
-
-.footer{
-    background-color: #26035D;
-    color: #FAF7F0;
-}
-
-.footerLogo{
-    filter: brightness(0) invert(1);
-}
-
-.contactInfoFooter{
-    display: flex;
-    justify-content: space-around;
-    font-size: 30px;
-}
-
-@keyframes pulse{
-    50%{
-        width: 550px;
-        height: 550px;
-    }
-}
-
-@keyframes spacing{
-    50%{
-        letter-spacing: 10px;
-    }
-}
+@keyframes spacing {
+  50% {
+    letter-spacing: 10px;
+  }
+}/*# sourceMappingURL=style.css.map */
